php error fix and spacing fix

--- a/css/sass/_default_html_tags.scss
+++ b/css/sass/_default_html_tags.scss
@@ -92,7 +92,7 @@ ul li ul, ol li ol {
 }
 
 ul.no-bullet li {
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
   padding: 10px 0 10px 0;
   list-style-image: none;
   list-style-type: none;
