--- a/css/sass/_rebrand.scss
+++ b/css/sass/_rebrand.scss
@@ -35,6 +35,9 @@ hr {
   a {
     text-decoration: underline;
   }
+  a:hover {
+    text-decoration: none;
+  }
   ul {
     li {
       margin-bottom: .6em;
